Fix drawer z-indexing issue

--- a/src/app.scss
+++ b/src/app.scss
@@ -244,12 +244,13 @@ hr {
 }
 
 .nm-drawer {
+  z-index: 9000;
+  pointer-events: none;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  pointer-events: none;
 
   .row {
     height: 100%;
@@ -257,6 +258,9 @@ hr {
 }
 
 .nm-drawer-body {
+  overflow-y: auto;
+  @include scrollbars();
+
   margin-left: auto;
   padding: 20px;
   height: 100%;
